--- a/index2.html
+++ b/index2.html
@@ -63,6 +63,8 @@ body {
     <p class="style5" dir="ltr"><a href="https://s3756411.github.io/">https://s3756411.github.io/</a></p>
     <p class="style5" dir="ltr"><a href="https://wldndgithub.github.io/Assignment_1/">https://wldndgithub.github.io/Assignment_1/</a></p>
     <p class="style5" dir="ltr"><a href="https://patbrenn.github.io/index.html">https://patbrenn.github.io/index.html</a></p>
+    <p class="style5" dir="ltr"><a href="#" title="https://nimosheikh.github.io">https://nimosheikh.github.io</a></p>
+    <p class="style5" dir="ltr"><a href="#" title="http://members.iinet.net.au/~luke-martin/IntroIT-A1/">http://members.iinet.net.au/~luke-martin/IntroIT-A1/</a></p>
     <span class="style5"><br />
     </span>
     <h2 class="style5" dir="ltr"><strong>Team Member Personal information</strong></h2>
